--- a/config.yml
+++ b/config.yml
@@ -1,11 +1,11 @@
-token: "lip_5ZLOYQOmhE7q0WAB7GVo"    # Lichess OAuth2 Token.
+token: "lip_XDtc2avGaKT0yVyTjRtT"    # Lichess OAuth2 Token.
 url: "https://lichess.org/"  # Lichess base URL.
 
 engine:                      # Engine settings.
   dir: "./"                  # Directory containing engines, relative to this project.
-  name: "stockfish_x64_modern"    # Binary name of the engine to use.
+  name: "fsf"    # Binary name of the engine to use.
   sfname: "stockfish"
-  antiname: "fsf"
+  antiname: "stockfish_x64_modern"
   protocol: "uci"            # "uci" or "xboard"
   ponder: true               # Think on opponent's time.
   polyglot:
