--- a/config.yml
+++ b/config.yml
@@ -3,9 +3,9 @@ url: "https://lichess.org/"  # Lichess base URL.
 
 engine:                      # Engine settings.
   dir: "./"                  # Directory containing engines, relative to this project.
-  name: "fsf"    # Binary name of the engine to use.
+  name: "stockfish_x64_modern"    # Binary name of the engine to use.
   sfname: "stockfish"
-  antiname: "stockfish_x64_modern"
+  antiname: "fsf"
   protocol: "uci"            # "uci" or "xboard"
   ponder: true               # Think on opponent's time.
   polyglot:
