--- a/config.yml
+++ b/config.yml
@@ -1,9 +1,9 @@
-token: "lip_TfXt1KoJDBCHCMTxAtmu"    # Lichess OAuth2 Token.
+token: "lip_FD64MypyoJKENo5bBMCr"    # Lichess OAuth2 Token.
 url: "https://lichess.org/"  # Lichess base URL.
 
 engine:                      # Engine settings.
   dir: "./"                  # Directory containing engines, relative to this project.
-  name: "stockfish_x64_modern"    # Binary name of the engine to use.
+  name: "stockfish_x86_64_modern"    # Binary name of the engine to use.
   sfname: "stockfish"
   antiname: "fsf"
   protocol: "uci"            # "uci" or "xboard"
