--- a/config.yml
+++ b/config.yml
@@ -3,7 +3,7 @@ url: "https://lichess.org/"  # Lichess base URL.
 
 engine:                      # Engine settings.
   dir: "./"                  # Directory containing engines, relative to this project.
-  name: "stockfish_x86_64_modern"    # Binary name of the engine to use.
+  name: "stockfish-x86_64_modern"    # Binary name of the engine to use.
   sfname: "stockfish"
   antiname: "fsf"
   protocol: "uci"            # "uci" or "xboard"
